# oxide-pilot

./: .gitignore  AGENTS.md  COGNEE_REMOVAL_REPORT.md  COMPLETION_SUMMARY.md  Cargo.toml  DEPLOYMENT_SUMMARY.md  FINAL_STATUS.md  FINAL_SUMMARY.md  GOOGLE_OAUTH_SETUP.md  INSTALL_AND_TEST.md  LICENSE  NEXT_STEPS.md  OAUTH_SETUP.md  PHASE3_COMPLETE.md  PHASE4_PROGRESS.md  PLANNING.md  README-WINDOWS-BUILD.md  README.md  RELEASE_NOTES.md  RULES.md  SECURITY_ALERT.md  SETUP.md  SUMMARY.md  SURREALDB_SUMMARY.md  TASK.md  UI_AUDIT_REPORT.md  WARNINGS-FIXED-REPORT.md  WORKFLOW_ANALYSIS.md  WORKFLOW_FIXES.md  config.example.json  docker-compose.cognee.yml  idea1.md  oxide-guardian-report.json  package-lock.json  package-release.bat  package.json  test.bat  test_app.bat
.cargo/: config.toml
.github/: RELEASE_AUTOMATION.md
.github/workflows/: auto-release-on-validation.yml  build-release.yml  ci.yml  release-production.yml  release.yml  validate-core.yml  validate.yml  windows-ci.yml  windows-ci.yml.disabled
.husky/: commit-msg  pre-push
.kiro/specs/oxide-pilot-agentic-system/: design.md  requirements.md  tasks.md
.windsurf/workflows/: bug.md  cognee-integration.md  oxide-pilot-context.md  run-tests-and-fix.md
docs/: CODE_SIGNING_GUIDE.md  CODE_SIGNING_QUICKSTART.md  COLLABORATIVE_LLM_SYSTEM.md  ENVIRONMENT_SETUP.md  GITHUB_SECRETS_SETUP.md  IMPLEMENTATION-TASKS.md  IMPLEMENTATION_STATUS.md  LLVM_SETUP.md  NEXT_STEPS.md  OAUTH_SETUP.md  OPENAI_GPT5_OAUTH_PLAN.md  OPENAI_INTEGRATION.md  PERFORMANCE_OPTIMIZATION.md  PRODUCTION_DEPLOYMENT.md  PROGRESS_SUMMARY.md  PROJECT_STATUS.md  QWEN.md  README-SCRIPTS.md  README.md  RELEASE_NOTES.md  RELEASE_NOTES_RPA.md  RELEASE_PROCESS.md  RELEASE_WORKFLOW_GUIDE.md  REPO_CLEANUP.md  RPA_PERMISSIONS_SYSTEM.md  SURREALDB_MIGRATION.md  UI-UX-CHANGES.md  dual-model-integration.md
docs/archive/: FINAL-PROJECT-STATUS.md  FINAL-STATUS-REPORT.md  NEXT_SESSION_PROMPT.md  PROYECTO-COMPLETADO.md
enterprise/: group-policy-template.admx  install-enterprise.bat
oxide-copilot/: Cargo.toml
oxide-copilot/src/: ai.rs  auth_manager.rs  collaborative_providers.rs  copilot.rs  errors.rs  functions.rs  gemini_api.rs  lib.rs  llm_orchestrator.rs  oauth.rs  rpa.rs  voice.rs
oxide-core/: Cargo.toml
oxide-core/benches/: performance_benchmarks.rs
oxide-core/src/: auth.rs  config.rs  config_manager.rs  encryption.rs  events.rs  gemini_auth.rs  google_auth.rs  input_validation.rs  lib.rs  metrics.rs  openai_auth.rs  openai_client.rs  openai_key.rs  performance.rs  qwen_auth.rs  security.rs  security_manager.rs  types.rs  utils.rs
oxide-guardian/: Cargo.toml
oxide-guardian/benches/: guardian_benchmarks.rs
oxide-guardian/examples/: security_diagnostic.rs
oxide-guardian/src/: external_api.rs  guardian.rs  lib.rs  metrics_collector.rs  monitor.rs  optimizer.rs  quarantine.rs  scanner.rs  security.rs  signatures.rs
oxide-memory/: Cargo.toml
oxide-memory/src/: backend.rs  lib.rs  memory.rs  surreal_backend.rs
oxide-rpa/: Cargo.toml
oxide-rpa/benches/: rpa_benchmarks.rs
oxide-rpa/src/: audit.rs  confirmation.rs  lib.rs  permissions.rs  rollback.rs  rpa.rs  secure_rpa.rs
oxide-tauri/: Cargo.toml
oxide-voice/: Cargo.toml
oxide-voice/src/: audio.rs  lib.rs  voice.rs
scripts/: build-production.ps1  build-release.ps1  build-windows.ps1  create-installer.ps1  create-portable.ps1  create-release.ps1  dev-up.ps1  generate-signing-keys.ps1  oxide-clean.bat  oxide-dev.bat  oxide-dev.ps1  pre-commit.mjs  run-benchmarks.ps1  run-e2e-tests.ps1  security-audit.ps1  security-diagnostic.ps1  setup-code-signing.ps1  setup-cognee-sidecar.ps1  setup-completo.ps1  setup-env.ps1  setup-env.sh  setup-github-remote.ps1  setup-github-secrets.ps1  setup-surrealdb.ps1  test-security-diagnostic.ps1  transfer-to-organization.ps1  validate-commit.mjs  validate-release.ps1  validate-workflows.ps1
src-frontend/: .gitignore  E2E_TEST_REPORT.md  biome.json  index.html  index.legacy.html  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts
src-frontend/playwright-report/: index.html
src-frontend/scripts/: run-e2e.mjs
src-frontend/src/: app.html
src-frontend/src/lib/actions/: anime.ts
src-frontend/src/lib/components/: AdvancedSettings.svelte  AppLayout.svelte  AudioControls.svelte  CollaborativeAnalysis.svelte  ConversationInterface.svelte  ErrorBoundary.svelte  GoogleAuthSetup.svelte  GuardianAlertsPanel.svelte  GuardianDashboard.svelte  GuardianProcessesPanel.svelte  GuardianThreatTrainer.svelte  (+18 more)
src-frontend/src/routes/: +page.svelte
src-frontend/static/styles/: tokens.css  utilities.css
src-frontend/test-results/: .last-run.json  network.har  report.json
src-frontend/test-results/google-oauth-ui-Google-OAu-f4c88-r-status-and-stays-on-setup-chromium/: video.webm
src-frontend/test-results/junit/: results.xml
src-frontend/tests/: collaborative-system.spec.ts  essential-tests.spec.ts  file-scan-ui.spec.ts  fixtures.ts  folder-scan-ui.spec.ts  global-setup.ts  global-teardown.ts  google-oauth-ui.spec.ts  local-models-ui.spec.ts  openai-oauth-ui.spec.ts  provider-routing.spec.ts  qwen-device-flow.spec.ts  realistic-integration.spec.ts  rpa-integration.spec.ts  security-performance.spec.ts  settings-auth-status.spec.ts  smoke-tests.spec.ts  smoke.spec.ts  system-integration.spec.ts  threat-consensus.spec.ts  ui-responsiveness.spec.ts
src-tauri/: .env.example  Cargo.toml  build.rs  create_icon.py  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: cognee_supervisor.rs  error_handler.rs  guardian_commands.rs  local_llm.rs  main.rs  main_simple.rs  main_working.rs  mcp_server.rs  oxide_system.rs  rpa_commands.rs  rpa_integration_test.rs  security_diagnostic.rs  threat_consensus.rs
tests/: integration_audio_tests.rs  integration_system_tests.rs  integration_test.rs  integration_tests.rs  oxide_copilot_tests.rs  oxide_core_tests.rs  oxide_guardian_tests.rs  oxide_memory_tests.rs  oxide_rpa_tests.rs  oxide_voice_tests.rs  performance_tests.rs  test_gemini_integration.bat
tests/e2e/: basic_flow.rs
(+7 files in other folders)
