[workspace]
members = [
  "oxide-core",
  "oxide-copilot",
  "oxide-guardian",
  "oxide-memory",
  "oxide-cognee-bridge",
  "oxide-rpa",
  "oxide-voice"
]
resolver = "2"
exclude = [
  "src-tauri"
]

[workspace.dependencies]
uuid = { version = "1.10", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
anyhow = "1"
tracing = "0.1"
