[workspace]
members = [
  "oxide-core",
  "oxide-copilot",
  "oxide-guardian",
  "oxide-memory",
  "oxide-rpa",
  "oxide-voice"
]
resolver = "2"
exclude = [
  "src-tauri"
]

[workspace.dependencies]
uuid = { version = "1.10", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
anyhow = "1"
tracing = "0.1"

# Profile optimizations for production builds
[profile.release]
opt-level = 3          # Maximum optimization
lto = "thin"           # Link-time optimization (thin for faster builds)
codegen-units = 1      # Better optimization, slower compile
strip = true           # Strip symbols for smaller binary
panic = "abort"        # Smaller binary, faster panic handling

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true
