[workspace]
members = [
  "oxide-core",
  "oxide-copilot",
  "oxide-guardian",
  "oxide-memory",
  "oxide-rpa",
  "oxide-voice"
]
resolver = "2"
exclude = [
  "src-tauri"
]

[workspace.dependencies]
uuid = { version = "1.10", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
anyhow = "1"
tracing = "0.1"

# Profile optimizations for production builds
# Reduced settings to prevent OOM errors on systems with limited RAM
[profile.release]
opt-level = 2          # Good optimization without excessive memory usage
lto = false            # Disabled LTO to reduce memory consumption
codegen-units = 16     # Parallel codegen units to reduce per-unit memory
strip = true           # Strip symbols for smaller binary
panic = "abort"        # Smaller binary, faster panic handling
incremental = true     # Enable incremental compilation

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true
