[package]
name = "oxide-copilot"
version = "0.1.0"
edition = "2021"

[dependencies]
oxide-core = { path = "../oxide-core" }
log = "0.4"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oxide-rpa = { path = "../oxide-rpa" }
