[package]
name = "oxide-guardian"
version = "0.1.0"
edition = "2021"

[dependencies]
oxide-core = { path = "../oxide-core" }
sysinfo = "0.29"
log = "0.4"
yara = "0.16"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = ["Win32_System_ProcessStatus"] }
