[package]
name = "oxide-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
oxide-core = { path = "../oxide-core" }
log = "0.4"
async-trait = "0.1"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"

# SurrealDB dependencies (feature-gated)
surrealdb = { version = "2.3", optional = true, features = ["kv-rocksdb", "protocol-ws"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[features]
default = ["surrealdb"]
cognee = []
surrealdb = ["dep:surrealdb"]
