[package]
name = "oxide-voice"
version = "0.1.0"
edition = "2021"

[dependencies]
oxide-core = { path = "../oxide-core" }
log = "0.4"
async-trait = "0.1"
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
cpal = "0.15"
hound = "3.5"
rodio = "0.17"
rand = "0.8"
