
[package]
name = "oxide-pilot"
version = "0.1.0"
authors = ["You"]
edition = "2021"

[dependencies]
tauri = { version = "1.4", features = ["shell-open", "system-tray", "notification", "dialog", "fs-all", "path-all", "window-all", "process-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
sysinfo = "0.29"
oxide-core = { path = "../oxide-core" }
oxide-guardian = { path = "../oxide-guardian" }
oxide-copilot = { path = "../oxide-copilot" }
oxide-memory = { path = "../oxide-memory" }
oxide-voice = { path = "../oxide-voice" }
oxide-rpa = { path = "../oxide-rpa" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = ["Win32_System_ProcessStatus"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
